Restructuring the folders and unifying the two .gitignore files

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "framelog-interface",
   "version": "1.0.0",
   "description": "Interface for FrameLog application",
-  "main": "main.js",
+  "main": "interface/main.js",
   "scripts": {
     "start": "electron .",
     "build": "electron-builder",
